--- a/static/jnation/mondego-tv/index.html
+++ b/static/jnation/mondego-tv/index.html
@@ -53,7 +53,7 @@
   </footer>
 
   <script>
-    ((global, document) => {
+    (function(global, document) {
       'use strict';
 
       const timeout = 3*60*1000; // 3 minutes
@@ -96,7 +96,7 @@
 
       updateImage();
 
-      global.setInterval(() => {
+      global.setInterval(function() {
         updateImage();
       }, timeout);
     })(window, document);
